minio-s3-bucket/minio-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: minio-dev-service
  namespace: minio-dev
spec:
  selector:
    app: minio-dev
  ports:
    - name: s3api
      protocol: TCP
      port: 9000
      targetPort: 9000
    - name: console
      protocol: TCP
      port: 9090
      targetPort: 9090
